k8s-api-request-flow/manifests/02-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flow-test-pod
  labels:
    team: platform
spec:
  containers:
    - name: nginx
      image: nginx:alpine
