k8s-api-request-flow/manifests/07-bare-pod-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bare-pod-2
  namespace: admission-demo
spec:
  containers:
    - name: nginx
      image: nginx:alpine
