k8s-api-request-flow/manifests/11-pod-with-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: has-team-label
  namespace: webhook-demo
  labels:
    team: platform
spec:
  containers:
    - name: nginx
      image: nginx:alpine
