k8s-api-request-flow/manifests/15-pod-missing-label-opa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-team-label-opa
  namespace: opa-demo
spec:
  containers:
    - name: nginx
      image: nginx:alpine
