k8s-api-request-flow/manifests/16-pod-with-label-opa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: has-team-label-opa
  namespace: opa-demo
  labels:
    team: platform
spec:
  containers:
    - name: nginx
      image: nginx:alpine
